s3_basic_linked_list/test/submission3.test
_id: 5c766b4d6779dd5668a6834e
archive: 5c766b506779dd5668a6834f
courseid: LSINF1252
custom: {}
grade: 0.0
input:
    '@lang': en
    '@random': []
    '@state': ''
    '@username': pvlaicu
    add_node: |-
        if(list==NULL)return 1;
        node_t* n=(node_t *)malloc(sizeof(node_t));
        if(n==NULL)return NULL;

        n=init_node(value);
        (*n).next=(*list).first;
        (*list).first=n;
        (*list).size++;
        return 0;
    init_node: |-
        node_t* n=(node_t *) malloc(sizeof(node_t));
        if(n==NULL)return NULL;
        (*n).value=value;
        (*n).next=NULL;
        return n;
problems: {}
response_type: rst
result: failed
state: ''
status: done
stderr: ''
stdout: ''
submitted_on: 2019-02-27 11:49:49.953000
taskid: basic_linked_list
tests:
    not_compile: true
text: |+
    La compilation de votre code a échoué. Voici le message de sortie de la commande ``make`` :

    .. code-block::

        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o tests.o tests.c
        gcc -Wall -Werror -DC99 -std=gnu99 -ICTester -c -o student_code.o student_code.c
        student_code.c: In function ‘add_node’:
        student_code.c:16:12: error: return makes integer from pointer without a cast [-Werror]
         if(n==NULL)return NULL;
                    ^
        cc1: all warnings being treated as errors
        make: *** [student_code.o] Error 1

username:
- pvlaicu
